testsuite/tests/typecheck/should_fail/T11563.stderr

T11563.hs:5:19: error:
    • Expecting one more argument to ‘T’
      Expected a type, but ‘T’ has kind ‘* -> *’
    • In the first argument of ‘C’, namely ‘T’
      In the instance declaration for ‘C T’
